play2 sample app for openshift

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
 logs
 project/project
 project/target
-#target #commented for deploying to openshift
+target
 tmp
 .history
 dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+
+*.sw?
+*~
